--- a/day3/generator/angularapp/src/app/app.component.html
+++ b/day3/generator/angularapp/src/app/app.component.html
@@ -6,7 +6,9 @@
 </header>
 <section class="bg-warning">
   <app-binding></app-binding>
-  
+  <app-stock></app-stock>
+  <app-event></app-event>
+  <app-DI></app-DI>
 </section>
 <footer class="bg-dark text-center text-warning">
   <h3>Copyright Reserved to SYSTEM</h3>
