--- a/day3/generator/angularapp/src/app/app.component.html
+++ b/day3/generator/angularapp/src/app/app.component.html
@@ -5,10 +5,17 @@
   </h1>
 </header>
 <section class="bg-warning">
-  <app-binding></app-binding>
+  <!-- <app-binding></app-binding>
   <app-stock></app-stock>
   <app-event></app-event>
-  <app-DI></app-DI>
+  <app-DI></app-DI> -->
+  <!-- <app-lifecycle></app-lifecycle> -->
+
+  <!-- <app-http></app-http> -->
+
+  <!-- <app-navbar></app-navbar> -->
+
+  
 </section>
 <footer class="bg-dark text-center text-warning">
   <h3>Copyright Reserved to SYSTEM</h3>
